--- a/Jstyle.css
+++ b/Jstyle.css
@@ -1,4 +1,3 @@
-
 p {
   text-align: center; 
   font-size: 30px;
@@ -23,4 +22,8 @@ body {
     margin: 0 auto;
     text-align: justify;
     width: 45em;
+}
+
+img {
+  border: 5px solid #FAEBD7;
 }
