--- a/Jstyle.css
+++ b/Jstyle.css
@@ -32,7 +32,7 @@ img {
   margin: 0;
   padding: 0;
   width: 200px;
-  background-color: #FFFAF0;
+  background-color: #FAEBD7;
   position: fixed;
   height: 100%;
   overflow: auto;
@@ -50,7 +50,6 @@ img {
   color: white;
 }
 
-/* Links on mouse-over */
 .sidebar a:hover:not(.active) {
   background-color: #555;
   color: white;
