--- a/Jstyle.css
+++ b/Jstyle.css
@@ -8,7 +8,6 @@ h2 {
   text-align:center; 
   font-size: 60px;
   color: AntiqueWhite;
-  top:0:
   }
 
 body {
@@ -33,7 +32,7 @@ img {
   margin: 0;
   padding: 0;
   width: 200px;
-  background-color: #F8F8FF;
+  background-color: #FAEBD7;
   position: fixed;
   height: 100%;
   overflow: auto;
