--- a/Jstyle.css
+++ b/Jstyle.css
@@ -32,7 +32,7 @@ img {
   margin: 0;
   padding: 0;
   width: 200px;
-  background-color: #555;
+  background-color: #F8F8FF;
   position: fixed;
   height: 100%;
   overflow: auto;
