--- a/Jstyle.css
+++ b/Jstyle.css
@@ -72,12 +72,12 @@ img {
   .sidenav a {font-size: 18px;}
 }
 
-/* Set the width of the side navigation to 250px */
+<script>
 function openNav() {
   document.getElementById("mySidenav").style.width = "250px";
 }
 
-/* Set the width of the side navigation to 0 */
 function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
 }
+</script>
