--- a/Jstyle.css
+++ b/Jstyle.css
@@ -8,7 +8,7 @@ h2 {
   text-align:center; 
   font-size: 60px;
   color: Navy;
-  backgroundimage: <img src="https://i.pinimg.com/originals/af/91/19/af911971a1696abfefef47ef55d4e1dd.png" alt="banner>
+  backgroundimage: href="https://i.pinimg.com/originals/af/91/19/af911971a1696abfefef47ef55d4e1dd.png" 
   backgroundimage: opacity: 0.5;
   }
 
