--- a/Jstyle.css
+++ b/Jstyle.css
@@ -8,8 +8,7 @@ h2 {
   text-align:center; 
   font-size: 60px;
   color: Navy;
-  backgroundimage: href="https://i.pinimg.com/originals/af/91/19/af911971a1696abfefef47ef55d4e1dd.png" 
-  backgroundimage: opacity: 0.5;
+  backgroundimage: href="https://cdn-icons-png.freepik.com/512/32/32631.png" 
   }
 
 body {
@@ -26,6 +25,13 @@ body {
     width: 45em;
 }
 
+iconimg{
+     backgroundimage: href="https://cdn-icons-png.freepik.com/512/32/32631.png" 
+      top: 30;
+      right: 30;
+      width: 30px;
+      height: 30px;
+    
 img {
   border: 5px solid #03045e;
 }
