--- a/Jstyle.css
+++ b/Jstyle.css
@@ -83,15 +83,8 @@ function closeNav() {
 }
 </script>
 
-div.polaroid {
-  width: 80%;
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-img {width: 100%}
-
-div.container {
-  text-align: center;
-  padding: 10px 20px;
+.myElement {
+    background-image: url('https://png.pngtree.com/png-vector/20230824/ourmid/pngtree-shark-icon-is-shown-in-a-white-circle-vector-png-image_6921252.png');
+    width: 50px;
+    height: 50px;
 }
