--- a/Jstyle.css
+++ b/Jstyle.css
@@ -87,4 +87,6 @@ function closeNav() {
     background-image: url('https://png.pngtree.com/png-vector/20230824/ourmid/pngtree-shark-icon-is-shown-in-a-white-circle-vector-png-image_6921252.png');
     width: 50px;
     height: 50px;
+    top: 30; 
+    right: 30;
 }
