--- a/Jstyle.css
+++ b/Jstyle.css
@@ -84,14 +84,14 @@ function closeNav() {
 </script>
 
 .banner {
-    width: 100%; /* Adjust the width as needed */
-    height: 200px; /* Adjust the height as needed */
-    background-color: #f0f0f0; /* Background color of the banner area */
-    text-align: center; /* Center-align contents */
-    overflow: hidden; /* Ensure the image doesn't overflow */
+    width: 1000px; 
+    height: 200px; 
+    background-color: #f0f0f0; 
+    text-align: center; 
+    overflow: hidden; 
 }
 
 .banner img {
-    max-width: 100%; /* Ensure the image doesn't exceed the width of its container */
-    height: auto; /* Maintain aspect ratio */
+    max-width: 100%; 
+    height: auto; 
 }
